# NeoBERT

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject copy.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  agent.md  copilot-instructions.md
.github/agents/: cleanup_agent.agent.md  readability_agent.agent.md
.github/workflows/: required-checks.yml
conf/: accelerate_ddp.yaml  accelerate_deepspeed_zero1.yaml  accelerate_deepspeed_zero2.yaml  accelerate_deepspeed_zero3.yaml  difficulty.yaml  finetuning.yaml  glue.yaml  glue_mop.yaml  mteb.yaml  mteb_task_to_instruction_corpus.json  mteb_task_to_instruction_query.json  pathways_visualiser.yaml  predictor.yaml  pretraining _test.yaml  pretraining.yaml  pretraining_CRAMMING.yaml  pretraining_hetero_moe.yaml  pretraining_hetero_moeCRAMMING.yaml  pretraining_hetero_moe_pile.yaml  pretraining_homo_moe.yaml  pretraining_homo_moe_CRAMMING.yaml  pretraining_homo_moe_pile.yaml  pretraining_mop copy.yaml  pretraining_mop.yaml  pretraining_neobert_original.yaml  pretraining_pile.yaml  tester.yaml
conf/datacollator/: CRAMMINGmlm_15.yaml  base.yaml  mlm_15.yaml  mlm_20.yaml
conf/dataloader/: CRAMMINGdataloader.yaml  base.yaml  dataloader_glue.yaml  dataloader_pathways.yaml  dataloader_pathways_visualiser.yaml  dataloader_predictor.yaml
conf/dataset/: CRAMMINGpile.yaml  contrastive.yaml  glue_stsb.yaml  minipile.yaml  minipile_pathways_visualiser.yaml  minipile_predictor.yaml  minipile_tiny_local.yaml  pile.yaml  refinedweb.yaml  wikibook.yaml
conf/model/: 120M.yaml  250M-opt.yaml  250M.yaml  architecture_hetero_moe.yaml  architecture_original.yaml  bert.yaml  hetero_moe.yaml  homo_moe.yaml  mop.yaml  neobert.yaml  tiny_test.yaml
conf/optimizer/: adam.yaml  adamw.yaml  adamw_glue.yaml  soap.yaml
conf/scheduler/: cosine_decay.yaml  glue.yaml  linear_decay.yaml
conf/sweeps/: sweep.yaml
conf/tokenizer/: CRAMMINGtokenizer.yaml  google.yaml  google_mini.yaml  llama.yaml  pile.yaml
conf/trainer/: contrastive.yaml  glue.yaml  losses.yaml  mlm.yaml  routing_pred.yaml
data/.pathways_cache/jeankaddourminipiletest/: dataset_info.json  state.json
data/.pathways_cache/jeankaddourminipiletest_100/: data-00000-of-00001.arrow  state.json
data/.pathways_cache/jeankaddourminipiletrain_100/: data-00000-of-00001.arrow  state.json
data/.pathways_cache/jeankaddourminipiletrain_10000/: state.json
jobs/: neobert-4096.sh  neobert.sh
jobs/ablations/: bert-ablation-00.sh  bert-ablation-01.sh  bert-ablation-02.sh  bert-ablation-03.sh  bert-ablation-04.2.sh  bert-ablation-04.sh  bert-ablation-05.2.sh  bert-ablation-05.sh  bert-ablation-06.sh  bert-ablation-07.sh  bert-ablation-08.sh  bert-ablation-09.sh  bert-ablation-10.sh  bert-ablation-11.sh
jobs/contrastive/: finetune.sh  preprocess.sh
jobs/evaluation/: ppl.sh
jobs/glue/: launcher.sh  train.sh
jobs/mteb/: run.sh
jobs/preprocess/: longer_seq_refinedweb.sh  refinedweb_google.sh  refinedweb_llama.sh  wikibook_google.sh  wikibook_llama.sh
scripts/: download_results.py
scripts/analyses/: analyse_pathways.py  compute_correlations.py  measure_difficulty.py  predict_routing.py  pretrained.py  test.py  test_pretrained.py  visualise_pathways.py
scripts/contrastive/: download.py  finetune.py  preprocess.py
scripts/download_results/: download_results.py
scripts/evaluation/: avg_mteb.py  pseudo_perplexity.py  run_glue.py  run_mteb.py  wrappers.py
scripts/fine_tuning/: run_glue.py  run_glue_multi.py
scripts/pretraining/: compute_correlations.py  download_minipile_subset.py  download_results.py  from_local_to_modal.py  longer_seq.py  measure_difficulty.py  preprocess.py  pretrain.py  pretrain_modal.py  pretrain_modal_multi.py  pretrain_sweep.py  test.py
scripts/pretraining/download_results/: download_results.py
scripts/pretraining/tokenizer/: tokenizer.json
src/neobert/: modal_runner.py  utils.py
src/neobert/analysis/: __init__.py  analyse_pretrained.py  analysis.py  analysis_test.py  analysis_utils.py  analysis_utils_original.py  pathways.py  pathways_visualiser.py  test_pretrained_model.py
src/neobert/collator/: __init__.py  collator.py
src/neobert/collatorCRAMMING/: __init__.py  collatorCRAMMING.py
src/neobert/collator_pile/: __init__.py  collator_pile.py
src/neobert/contrastive/: __init__.py  datasets.py  loss.py  metrics.py  trainer.py
src/neobert/correlations/: __init__.py  correlation.py
src/neobert/dataloader/: __init__.py  dataloader.py
src/neobert/dataloaderCRAMMING/: __init__.py  dataloaderCRAMMING.py
src/neobert/dataloader_pile/: __init__.py  dataloader_pile.py
src/neobert/dataset/: __init__.py  dataset.py  dataset_stsb.py
src/neobert/datasetCRAMMING/: __init__.py  datasetCRAMMING.py
tests/: conftest.py  test_external_connectivity.py  test_external_e2e.py  test_offline_e2e.py  test_predictor_smoke.py  test_pretrain_smoke.py
(+37 files in other folders)
