[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neobert"
version = "0.0.0"
description = "A state-of-the-art update of BERT"
requires-python = ">= 3.10"
dependencies = [
    "torch==2.5.*",
    "accelerate==1.1.*",
    "transformers==4.46.*",
    "datasets==3.1.*",
    "wandb==0.18.*",
    "hydra-core==1.3.*",
    "numpy==1.26.*",
    "scikit-learn==1.5.*",
    "peft>=0.11.1,<0.12.0",
    "matplotlib",
    "dotenv", #necessary for wandb to work properly in the docker container
]
authors = [
    { name = "Lola Le Breton", email = "lola.lebreton@mila.quebec" },
    { name = "Quentin Fournier", email = "quentin.fournier@mila.quebec" },
]
maintainers = [
    { name = "Lola Le Breton", email = "lola.lebreton@mila.quebec" },
    { name = "Quentin Fournier", email = "quentin.fournier@mila.quebec" },
]

readme = "README.md"
license = { text = "MIT License" }
keywords = []


[project.optional-dependencies]
dev = ["black", "ruff", "pytest", "pytest-cov", "pytest-clarity", "xeger"]
modal = [
  "inquirer~=3.4.0",
  "modal~=1.0.3",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "local: deterministic local tests (no external network required)",
    "external: tests that touch external services (HF, W&B, Modal)",
    "e2e: full pipeline integration tests",
    "slow: long-running tests",
    "smoke: fast sanity tests",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]