[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neobert"
version = "0.0.0"
description = "A state-of-the-art update of BERT"
requires-python = ">= 3.10"
dependencies = [
    # Keep base install lightweight for local/dev containers.
    # Training/runtime stacks are installed via extras below.
    "hydra-core==1.3.*",
    "numpy==1.26.*",
    "python-dotenv>=1.0,<2.0", # required for loading env vars in local/container workflows
]
authors = [
    { name = "Lola Le Breton", email = "lola.lebreton@mila.quebec" },
    { name = "Quentin Fournier", email = "quentin.fournier@mila.quebec" },
]
maintainers = [
    { name = "Lola Le Breton", email = "lola.lebreton@mila.quebec" },
    { name = "Quentin Fournier", email = "quentin.fournier@mila.quebec" },
]

readme = "README.md"
license = { text = "MIT License" }
keywords = []


[project.optional-dependencies]
# Core HF stack without torch. Useful in lightweight dev images.
hf = [
    "accelerate==1.1.*",
    "transformers==4.46.*",
    "datasets==3.1.*",
    "peft>=0.11.1,<0.12.0",
]

# Full local training stack (can pull large torch/CUDA wheels depending on platform).
train = [
    "torch==2.5.*",
    "accelerate==1.1.*",
    "transformers==4.46.*",
    "datasets==3.1.*",
    "wandb==0.18.*",
    "scikit-learn==1.5.*",
    "peft>=0.11.1,<0.12.0",
    "matplotlib",
    "evaluate==0.4.*",
]

# Training stack without torch to allow explicit CPU/GPU torch install in Docker builds.
train_base = [
    "accelerate==1.1.*",
    "transformers==4.46.*",
    "datasets==3.1.*",
    "wandb==0.18.*",
    "scikit-learn==1.5.*",
    "peft>=0.11.1,<0.12.0",
    "matplotlib",
]

# GPU-oriented training add-ons (typically for Modal/cluster runs).
train_gpu = [
    "deepspeed==0.15.4",
    "xformers==0.0.28.*",
]

# Extra packages typically needed for Modal jobs.
modal = [
  "inquirer~=3.4.0",
  "modal~=1.0.3",
]

# Tooling and tests only.
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-clarity",
    "xeger",
]

# Convenience profile for full local development.
full = [
    "torch==2.5.*",
    "accelerate==1.1.*",
    "transformers==4.46.*",
    "datasets==3.1.*",
    "wandb==0.18.*",
    "scikit-learn==1.5.*",
    "peft>=0.11.1,<0.12.0",
    "matplotlib",
    "inquirer~=3.4.0",
    "modal~=1.0.3",
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-clarity",
    "xeger",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "local: deterministic local tests (no external network required)",
    "external: tests that touch external services (HF, W&B, Modal)",
    "e2e: full pipeline integration tests",
    "slow: long-running tests",
    "smoke: fast sanity tests",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]